--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
-requests>=2.32.0
-urllib3>=1.21.1
-psutil>=6.1.0
+# IDS Engine Dependencies
+# Core dependencies
+requests>=2.28.0
+psutil>=5.9.0
+
+# Packet capture (choose based on your platform)
+# For Windows: WinPcap or Npcap (manual install required)
+scapy>=2.5.0
+
+# Optional: For Python 3.12+
+# If using older Python, install compatible versions
